--- a/poke-team-maker/.eslintrc.json
+++ b/poke-team-maker/.eslintrc.json
@@ -1,21 +1,35 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+      "browser": true,
+      "es6": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
-    "overrides": [
-    ],
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 2021,
+      "sourceType": "module"
     },
     "plugins": [
-        "react"
+      "react",
+      "@typescript-eslint"
     ],
     "rules": {
+      "react/prop-types": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/no-empty-interface": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
     }
-}
+  }
+  
