--- a/poke-team-maker/package.json
+++ b/poke-team-maker/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.10",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.91",
+    "@mui/material": "^5.7.0",
+    "@mui/x-data-grid": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.3",
-    "eslint": "^7.0.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.9.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "typescript": "^4.5.4"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^2.1.3",
+    "typeface-roboto": "^1.1.13",
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "include": [
+    "src"
+  ],
+  "devDependencies": {
+    "eslint": "5.12.0",
+    "eslint-plugin-react": "^7.31.11",
+    "typescript": "^4.5.4"
   }
 }
